src/objects/C501_REST_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>client_id__c</fullName>
        <label>client_id</label>
        <length>124</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>client_secret__c</fullName>
        <label>client_secret</label>
        <length>124</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>code__c</fullName>
        <label>code</label>
        <length>124</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>refresh_token__c</fullName>
        <label>refresh_token</label>
        <length>124</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>valid_client_addresses__c</fullName>
        <label>valid_client_addresses</label>
        <type>TextArea</type>
    </fields>
    <label>C501 REST Settings</label>
</CustomObject>